# ChangeLog for app-office/calligra-l10n
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/calligra-l10n/ChangeLog,v 1.16 2012/06/24 14:07:00 ago Exp $

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> calligra-l10n-2.4.2.ebuild:
  stable for amd64/x86 , wrt to bug #423307

*calligra-l10n-2.4.90 (01 Jun 2012)

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +calligra-l10n-2.4.90.ebuild:
  Add also l10n for 2.4.90.

*calligra-l10n-2.4.2 (01 Jun 2012)

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +calligra-l10n-2.4.2.ebuild:
  Add 2.4.2 l10n.

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> calligra-l10n-2.4.1.ebuild:
  block koffice-l10n wrt bug#418459.

  27 May 2012; Agostino Sarubbo <ago@gentoo.org> calligra-l10n-2.4.1.ebuild:
  Stable for x86/amd64

  27 May 2012; Agostino Sarubbo <ago@gentoo.org> -calligra-l10n-2.4.0.ebuild:
  Remove old

*calligra-l10n-2.4.1 (26 Apr 2012)

  26 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-l10n-2.3.92.ebuild, +calligra-l10n-2.4.1.ebuild:
  Version bump

*calligra-l10n-2.4.0 (06 Apr 2012)

  06 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-l10n-2.3.86.ebuild, +calligra-l10n-2.4.0.ebuild:
  Version bump

*calligra-l10n-2.3.92 (22 Mar 2012)

  22 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +calligra-l10n-2.3.92.ebuild, -calligra-l10n-2.3.85.ebuild:
  Add l10n for RC2 release.

*calligra-l10n-2.3.86 (14 Jan 2012)

  14 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-l10n-2.3.84.ebuild, +calligra-l10n-2.3.86.ebuild:
  Version bump

*calligra-l10n-2.3.85 (22 Dec 2011)

  22 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -calligra-l10n-2.3.83.ebuild, calligra-l10n-2.3.84.ebuild,
  +calligra-l10n-2.3.85.ebuild:
  Version bump; remove old; drop arches where calligra is not keyworded

*calligra-l10n-2.3.84 (20 Nov 2011)

  20 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>