@@ -1,6 +1,9 @@
 # ChangeLog for app-office/calligra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.53 2012/06/24 14:05:50 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/calligra/ChangeLog,v 1.54 2012/06/24 14:07:48 ago Exp $
+
+  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> -calligra-2.4.1.ebuild:
+  Remove old
 
   24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> calligra-2.4.2.ebuild:
   stable for amd64/x86 , wrt to bug #423307
