@@ -1,6 +1,9 @@
 # ChangeLog for app-office/calligra-l10n
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/calligra-l10n/ChangeLog,v 1.16 2012/06/24 14:07:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/calligra-l10n/ChangeLog,v 1.17 2012/06/24 14:08:17 ago Exp $
+
+  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> -calligra-l10n-2.4.1.ebuild:
+  Remove old
 
   24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> calligra-l10n-2.4.2.ebuild:
   stable for amd64/x86 , wrt to bug #423307
